<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TwitteMarkupActivity!</string>
    <string name="app_name">dot.me</string>
    <string name="marcador_form_nome">Nome: </string>
    <string name="bt_send">Enviar</string>
    <string name="login">Login</string>
    <string name="bt_register">Register</string>
    <string name="login_user">Login: </string>
    <string name="login_pass">Password:</string>
    <string name="twitte_button">Twitte</string>
    <string name="twitte_save">Save</string>
    <string name="lbl_twitte">&quot;What's happening?&quot;</string>
    <string name="new_markup">New Label</string>
    <string name="markup_lbl_name">Name: </string>
    <string name="markup_lbl_words">Words(separeted per line):</string>
    <string name="markup_create_button">Create</string>
    <string name="markup_add_user">Add user...</string>
    <string name="following">Following</string>
    <string name="register_title">New Account</string>
    <string name="register_username">Username:</string>
    <string name="resgister_password">Password:</string>
    <string name="regsiter_repassword">Confirm password:</string>
    <string name="erro_connect">Please turn on a connection!</string>
    <string name="twitter_connecting">Waiting for twitter response...</string>
    <string name="twitter_connect_fail">Sorry but we fail to get twitter informations! Please try agin!</string>
    <string name="password_no_match">The password does not match!</string>
    <string name="creating_account">Creating account...</string>
    <string name="user_used">This username is not available</string>
    <string name="twitter_used">This twitter account is already registered</string>
    <string name="create_acc_succes">Account created successfully</string>
    <string name="create_acc_erro">Error creating account</string>
    <string name="user_required">Invalid username!</string>
    <string name="password_short">The password is too short!</string>
    <string name="get_basic_information">Getting account informations...</string>
    <string name="login_error">User/password incorrect</string>
    <string name="login_load">Connecting to your account...</string>
    <string name="dashboard_timeline">Tweets</string>
    <string name="dashboard_markup">Labels</string>
    <string name="dashboard_config">Account Config.</string>
    <string name="dashboard_fallowing">Fallowing</string>
    <string name="dashboard_trends">Trend Topics</string>
    <string name="markup_exists">This label already exists!</string>
    <string name="markup_create_success">The label was created with success!</string>
    <string name="markup_create_erro">Erro creating this label</string>
    <string name="text_message">Message</string>
    <string name="dashboard_logout">Logout</string>
    <string name="markups_list">Labels</string>
    <string name="markup_updated_success">Label updated with success!</string>
    <string name="markup_bt_update">Update</string>
    <string name="markup_txt_update">Update Label</string>
    <string name="markup_edit">Edit Labels</string>
    <string name="markup_remove">Remove Label</string>
    <string name="lst_markups_delete">Delete</string>
    <string name="lst_markups_disable">Change state</string>
    <string name="delete_markups_success">Labels deleted with success!</string>
    <string name="delete_wait">Deleting label...</string>
    <string name="delete_markups_erro">Failed to delete labels!</string>
    <string name="update_load">Updating...</string>
    <string name="sending_tweet">Sending status...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="unable_update">Error on update! Please check your connection!</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="add_search_exists">You have already added this search</string>
    <string name="new_search">Search tweets</string>
    <string name="manage_columns">Manage columns</string>
    <string name="remove_column">Remove this column</string>
    <string name="main_column_name">Main timeline</string>
    <string name="arroba">\@</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="tweets">Tweets</string>
    <string name="mentions">Mentions</string>
    <string name="favorites">Favorites</string>
    <string name="downloading_user_info">Getting user_info...</string>
    <string name="searching">Searching...</string>
    <string name="bt_message_response">Response</string>
    <string name="retweet">Retweet</string>
    <string name="status_info">Status info</string>
    <string name="response_with">Response with:</string>
    <string name="retweeting">Retweeting...</string>
    <string name="conversation">Conversation</string>
    <string name="add">Add</string>
    <string name="remove">Del</string>
    <string name="manage_black_list">Manage Blacklist</string>
    <string name="add_word">Add Word</string>
    <string name="type_word">Type here:</string>
    <string name="type_word_adivice">Please, type a word!</string>
    <string name="no_items_selected">There are no items selecteds!</string>
    <string name="word_added">This word was added!</string>
    <string name="unfollow">Unfollow</string>
    <string name="getting_information">Getting information...</string>
    <string name="changing">Changing...</string>
    <string name="facebook_connect_lost">We lost acces to the facebook account. Please update this access to continue!</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="group_columns">Facebook Groups</string>
    <string name="facebook_feed">Facebook Feed</string>
    <string name="facebook_group_added">This group was added</string>
    <string name="view_more_comments">View more comments...</string>
    <string name="feed">Feed</string>
    <string name="write_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="posting_comment">Posting comment...</string>
    <string name="need_write_something">You need write something.</string>
    <string name="erro_posting_comment">Erro on post comment! </string>
    <string name="unlike">Unlike</string>
    <string name="erro_liking">Erro on like/unlike action</string>
    <string name="no_twitter_logged">You are not logged in a Twitter account!</string>
    <string name="managing_collumns">Managing Collumns</string>
    <string name="news_fedd">News Feed</string>
    <string name="notifications">Notifications</string>
    <string name="manage_collumns">Manage Collumns</string>
    <string name="message_sent">Message sent successfully</string>
    <string name="erro_message_sent">Error on sent!</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="add_twitter_acc">Add Twitter Account</string>
    <string name="add_facebbok_account">Add Facebook Account</string>
    <string name="logout">Logout</string>
    <string name="twitter_account">Twitter Account</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="loggingout">Logging out...</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="romoving_collumn">Removing collumn...</string>
    <string name="no_new_comments">No new comments!</string>
    <string name="no_new_updates">No new updates.</string>
    <string name="draft_saved">Draft saved.</string>
    <string name="feeds">Feeds</string>
    <string name="loading_cached_messages">Loading cached messages...</string>
    <string name="adding_twitter">Add a twitter account</string>
    <string name="search">Search</string>
    <string name="trend_topics">Trend Topics</string>
    <string name="trends">Trends</string>
    <string name="change">change</string>
    <string name="location_select">Select a location</string>
    <string name="manage_acc">Manage Accounts</string>
    <string name="manage_labels">Manage Labels</string>
    <string name="delete">Delete</string>
    <string name="disable">Disable</string>
    <string name="actions">Labels actions</string>
    <string name="change_disable_enable">Change(disable/enable)</string>
    <string name="reset_collumns">Reset Collumns</string>
     <string name="warning">Warning!</string>
    <string name="reset_collumns_message">This operation will reset your collumn config. It is irreversible. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="right_now">right now</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="about_one_hour">about 1 hour ago</string>
    <string name="days_ago">days ago</string>
    <string name="over_a_year">over a year ago</string>
    <string name="about_one_minute_ago">about 1 minute ago</string>
    <string name="remove_collumns_message">This operation will remove this collumn. It is irreversible. Are you sure?</string>
    <string name="image_view">Image View</string>
    <string name="admob_id">a150245438b7401</string>
    <string name="site">site</string>
    <string name="notification_service">Notification service</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="update_his_status">updated his status</string>
    <string name="update_her_status">updated her status</string>
    <string name="shared">shared</string>
    <string name="commented_on_post">also commented on a post in</string>
    <string name="posted_in">posted in</string>
    <string name="added_photo">added a new photo</string>
    <string name="commented_photo_tag">commented on a photo that you are tagged in</string>
    <string name="commented_status_tag">commented on a status that you are tagged in</string>
	<string name="added_photo_you">added a photo of you</string>
	<string name="likes_your_comment">likes your comment</string>
	<string name="likes_your_status">likes your status</string>
	<string name="commented_on_your_status">commented on your status</string>
	<string name="like_comment">like your comment</string>
	<string name="like_status">like your status</string>
	<string name="general_options">General Options</string>
	<string name="organization_option">Organization</string>
	
</resources>
