<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  style="@style/LoginBackground">
    <LinearLayout  android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:background="@drawable/top" android:layout_height="35dp">
        <TextView android:textStyle="bold" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/white" android:layout_gravity="center" android:layout_marginLeft="5dip" android:text="@string/register_title"></TextView>
    </LinearLayout>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_username" android:layout_marginLeft="10dip" android:layout_marginTop="5dip"></TextView>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/register_form_user" android:layout_marginLeft="5dip" android:layout_marginRight="5dip">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/resgister_password" android:layout_height="wrap_content" android:layout_marginLeft="10dip"></TextView>
    <EditText  android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/register_form_password" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:password="true"></EditText>
    <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:text="@string/regsiter_repassword" android:layout_height="wrap_content" android:layout_marginLeft="10dip"></TextView>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/register_form_repassword" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:password="true"></EditText>
    <Button style="@style/Button" android:text="@string/bt_send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/register_form_bt_send" android:layout_marginLeft="5dip"></Button>
    
</LinearLayout>
