<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" android:orientation="vertical">
    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:background="@drawable/top_timeline" android:layout_height="35dp">
        <TextView android:layout_height="wrap_content" android:textColor="@color/white" android:textStyle="bold" android:text="@string/markups_list" android:layout_gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_marginLeft="5dip"></TextView>
    </LinearLayout>
    <ListView android:visibility="visible" android:layout_width="fill_parent" android:id="@+id/markups_list" android:layout_height="wrap_content" android:layout_weight="0.7"></ListView>
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/lst_markup_layout" android:background="@drawable/foot_list" android:visibility="visible">
        <Button style="@style/Button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginRight="10dip" android:text="@string/lst_markups_delete" android:id="@+id/lst_markup_bt_delete" android:visibility="invisible"></Button>
        <Button style="@style/Button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:text="@string/lst_markups_disable" android:id="@+id/lst_markup_bt_disable" android:visibility="invisible"></Button>
    </LinearLayout>
</LinearLayout>
