<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="@drawable/login_back">
    <LinearLayout android:gravity="center_vertical" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:orientation="vertical" android:background="@drawable/top" android:layout_height="37dip">
        <ImageView android:layout_height="wrap_content" android:src="@drawable/logoname" android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_marginLeft="5dip"></ImageView>
    </LinearLayout>
    <LinearLayout  android:id="@+id/linearLayout4" android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="fill_parent">
        <LinearLayout android:id="@+id/linearLayout5" android:layout_width="fill_parent" android:layout_marginTop="20dip" android:layout_height="wrap_content" android:layout_weight="0.33">
            <LinearLayout android:gravity="center" android:layout_width="wrap_content" android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_weight="0.5" android:orientation="vertical">

                <Button
                    android:id="@+id/dashboard_bt_timeline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/timeline_button" >
</Button>
                <TextView style="@style/DashboardText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_marginTop="3dip" android:text="@string/feeds"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_weight="0.5" android:gravity="center" android:orientation="vertical">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/marcador_button" android:id="@+id/dashboard_bt_markup"></Button>
                <TextView style="@style/DashboardText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_marginTop="3dip" android:text="@string/dashboard_markup"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout  android:id="@+id/linearLayout6" android:layout_width="fill_parent" android:layout_marginTop="20dip" android:layout_height="wrap_content" android:layout_weight="0.33">
            <LinearLayout android:layout_weight="0.5" android:orientation="vertical" android:gravity="center" android:id="@+id/linearLayout10" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_width="wrap_content" android:background="@drawable/tt" android:layout_height="wrap_content" android:id="@+id/dashboard_bt_tt"></Button>
                <TextView android:text="@string/dashboard_trends" style="@style/DashboardText" android:layout_width="wrap_content" android:id="@+id/textView5" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@+id/linearLayout7" android:orientation="vertical" android:layout_height="wrap_content" android:layout_weight="0.5" android:layout_width="fill_parent">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/engrenagem_button" android:id="@+id/dashboard_bt_config"></Button>

                <TextView  style="@style/DashboardText"  android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashboard_config" android:layout_marginTop="3dip"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.33" android:layout_marginTop="10dip">
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
